re-wrote the processing logic for annot8r resources to happen inside one function, refined the logging messages

--- a/config/samples/kube_v1_annot8r.yaml
+++ b/config/samples/kube_v1_annot8r.yaml
@@ -8,6 +8,8 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: annot8r
   name: annot8r-sample
+  finalizers:
+    - annot8r.kube.tools/finalizer
 spec:
   name: coredns
   kind: deployment
